--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,4 +1,4 @@
-<a routerLink="/dashboard">Dashboard</a>
+<!-- <a routerLink="/dashboard">Dashboard</a> -->
 <nav class="navbar">
     <div class="nav-wrapper">
         <span class="brand">Finovent</span>
