--- a/client/src/app/add-feedback/add-feedback.component.html
+++ b/client/src/app/add-feedback/add-feedback.component.html
@@ -22,7 +22,7 @@
       <textarea
         id="comments"
         rows="3"
-        formControlName="comments"
+        formControlName="content"
         placeholder="Enter your comments here"
       ></textarea>
     </div>
