--- a/client/src/app/event-details/event-details.component.html
+++ b/client/src/app/event-details/event-details.component.html
@@ -70,7 +70,7 @@
           <p class="mb-1">{{ fb.comment }}</p>
           <small class="text-muted">
             By <strong>{{ fb.user?.username }}</strong> — ⭐ {{ fb.rating }}/5
-            <p>{{fb.user.content}}</p>
+            <p>{{fb.content}}</p>
           </small>
         </div>
       </div>
