--- a/client/src/app/event-details/event-details.component.html
+++ b/client/src/app/event-details/event-details.component.html
@@ -71,6 +71,7 @@
           <small class="text-muted">
             By <strong>{{ fb.user?.username }}</strong> — ⭐ {{ fb.rating }}/5
             <p>{{fb.content}}</p>
+            <p>Date: {{fb.datestring}}</p>
           </small>
         </div>
       </div>
