--- a/client/src/app/add-feedback/add-feedback.component.html
+++ b/client/src/app/add-feedback/add-feedback.component.html
@@ -28,7 +28,7 @@
     </div>
     <div class="form-group">
       <label for="date">Date</label>
-      <input id="date" type="date" formControlName="date" />
+      <input id="date" type="text" formControlName="datestring" />
     </div>
     <button type="submit" class="primary-btn">Submit Feedback</button>
   </form>
