--- a/client/src/app/registration/registration.component.html
+++ b/client/src/app/registration/registration.component.html
@@ -12,6 +12,9 @@
     <div class="form-group">
       <label for="password">Password</label>
       <input id="password" type="password" formControlName="password" placeholder="Enter password" />
+      <div *ngIf="itemForm.get('password')?.hasError('required')">
+        Password required
+      </div>
     </div>
     <div class="form-group">
       <label for="role">Role</label>
