--- a/client/src/app/event-details/event-details.component.html
+++ b/client/src/app/event-details/event-details.component.html
@@ -80,6 +80,9 @@
       </ng-template>
     </div>
   </div>
+
+
+  <input type="button" value="View Enrollments" (click)="viewEnrollments()">
 </div>
 
 <!-- Loading State -->
