--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -1,18 +1,24 @@
-<div class="login-container">
-  <h2>Login</h2>
-  <form [formGroup]="itemForm" (ngSubmit)="login()">
-    <div class="form-group">
-      <label for="username">Username</label>
-      <input id="username" type="text" formControlName="username" placeholder="Enter username" />
-    </div>
-    <div class="form-group">
-      <label for="password">Password</label>
-      <input id="password" type="password" formControlName="password" placeholder="Enter password" />
-    </div>
-    <button type="submit" class="primary-btn">Login</button>
-  </form>
-  <p class="error-message" *ngIf="errorMessage">{{ errorMessage }}</p>
-  <p class="register-link">
-    Don't have an account? <a routerLink="/registration">Register here</a>
-  </p>
+<div class="auth-page">
+  <div class="auth-card card">
+    <h2>Login to Finovent</h2>
+    <form [formGroup]="itemForm" (ngSubmit)="login()">
+      <div class="form-group">
+        <label for="username">Username</label>
+        <input id="username" type="text" formControlName="username" placeholder="Enter your username" />
+      </div>
+
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input id="password" type="password" formControlName="password" placeholder="Enter password" />
+      </div>
+
+      <button type="submit" class="btn-primary">Login</button>
+
+      <p class="error-message" *ngIf="errorMessage">{{ errorMessage }}</p>
+      <p class="alt-link">
+        Don’t have an account?
+        <a routerLink="/registration">Register here</a>
+      </p>
+    </form>
+  </div>
 </div>
